Fix section height issues and misaligned contact icons

--- a/src/scss/blackrock_creative.css
+++ b/src/scss/blackrock_creative.css
@@ -42,12 +42,15 @@ p {
   line-height: 1.5;
   margin-bottom: 20px;
 }
-.bg-primary {
+.bg-color {
   background-color: #00bc8c;
 }
-.bg-dark {
+.bg-primary {
   background-color: #222222;
   color: white;
+}
+.bg-secondary {
+  background-color: #333333;
 }
 .text-faded {
   color: rgba(255, 255, 255, 0.7);
