--- a/src/scss/scrolling_nav.scss
+++ b/src/scss/scrolling_nav.scss
@@ -1,22 +1,15 @@
 #skills {
-	height: 180%;
-	text-align: center;
-	background: #333333;
+	height: auto;
 }
 
 #projects {
-	text-align: center;
-	background: #222222;
+	/* STUFF */
 }
 
 #about {
-	height: 70%;
-	text-align: center;
-	background: #333333;
+	height: auto;
 }
 
 #contact {
-	height: 43%;
-	text-align: center;
-	background: #222222;
+	height: auto;
 }
